--- a/index.html
+++ b/index.html
@@ -4,32 +4,69 @@
 		<meta charset=utf-8>
 		<title>My first Three.js app</title>
 		<style>
-			body { margin: 0; }
-			canvas { width: 100%; height: 100% }
+			body { margin: 0}
+			canvas { width: 100%; height: 100%}
 		</style>
 	</head>
 	<body>
-		<script src="js/three.js"></script>
+		<script src="/three.js/build/three.js"></script>
+		<script src="/three.js/examples/js/controls/OrbitControls.js"></script>
 		<script>
-			// Our Javascript will go here.
+		  // scene
 			var scene = new THREE.Scene();
 			var aspect = window.innerWidth / window.innerHeight;
-			var camera = new THREE.PerspectiveCamera( 75, aspect, 0.1, 1000 );
+			// camera
+			var camera = new THREE.PerspectiveCamera(80, aspect, 0.1, 1000);
+			// renderer
 			var renderer = new THREE.WebGLRenderer();
-			renderer.setSize( window.innerWidth, window.innerHeight );
-			document.body.appendChild( renderer.domElement );
+			renderer.setSize(window.innerWidth, window.innerHeight);
 
-			var geometry = new THREE.BoxGeometry( 1, 1, 1 );
-			var material = new THREE.MeshNormalMaterial();
-			var cube = new THREE.Mesh( geometry, material );
-			scene.add( cube );
-			camera.position.z = 5;
+			document.body.appendChild(renderer.domElement);
+      
+      // texture mapping
+			var loader = new THREE.TextureLoader();
+			var texture = loader.load('earth2.png');
+			// mesh
+      // Sphere
+      var geometry = new THREE.SphereGeometry(2, 128, 128);
+			//var geometry = new THREE.BoxGeometry(1, 1, 1);
+			var material = new THREE.MeshPhongMaterial({
+				color: 0x99FFFF,
+				specular: 0x333333,
+				shininess: 20, 
+				map: texture,
+			  specularMap: texture,
+			  normalMap: texture,
+			});
+			var cube = new THREE.Mesh(geometry, material);
+      // adding light
+      var light = new THREE.DirectionalLight(0xffffff);
+			light.position.set(1, 1, 0).normalize();
+			
+      // put mesh and light into scene
+			scene.add(cube);
+		  scene.add(light);
+
+			camera.position.z = 6;
+      
+      // for orbit-rotation
+      var clock = new THREE.Clock();
+
+      // for mouse control
+      var controls = new THREE.OrbitControls(camera);
 
 			var render = function () {
-			  requestAnimationFrame( render );
-			  cube.rotation.x += 0.1;
-			  cube.rotation.y += 0.1;
-			  renderer.render( scene, camera );
+			  requestAnimationFrame(render);
+			  // self-rotation
+			  cube.rotation.x += 0.01;//THREE.Math.degToRad(45);
+			  cube.rotation.y += 0.01;//THREE.Math.degToRad(45);
+			  // orbit-rotation
+			  var time = clock.getElapsedTime() * 0.5;
+			  cube.position.x = Math.cos(time) * 3;
+			  cube.position.y = Math.sin(time) * 3;
+
+			  controls.update();
+			  renderer.render(scene, camera);
 			};
 
 			render();
