--- a/index.html
+++ b/index.html
@@ -16,20 +16,18 @@
 			var scene = new THREE.Scene();
 			var aspect = window.innerWidth / window.innerHeight;
 			// camera
-			var camera = new THREE.PerspectiveCamera(80, aspect, 0.1, 1000);
+			var camera = new THREE.PerspectiveCamera(100, aspect, 0.1, 1000);
+			camera.position.z = 6;
 			// renderer
 			var renderer = new THREE.WebGLRenderer();
 			renderer.setSize(window.innerWidth, window.innerHeight);
 
 			document.body.appendChild(renderer.domElement);
       
-      // texture mapping
 			var loader = new THREE.TextureLoader();
-			var texture = loader.load('earth2.png');
-			// mesh
-      // Sphere
+			// mesh = geometry + material(texture)
       var geometry = new THREE.SphereGeometry(2, 128, 128);
-			//var geometry = new THREE.BoxGeometry(1, 1, 1);
+			var texture = loader.load('earth2.png');
 			var material = new THREE.MeshPhongMaterial({
 				color: 0x99FFFF,
 				specular: 0x333333,
@@ -38,32 +36,36 @@
 			  specularMap: texture,
 			  normalMap: texture,
 			});
-			var cube = new THREE.Mesh(geometry, material);
-      // adding light
-      var light = new THREE.DirectionalLight(0xffffff);
-			light.position.set(1, 1, 0).normalize();
-			
+			var earth = new THREE.Mesh(geometry, material);
+
+      // three point lighting
+      var keyLight = new THREE.DirectionalLight(0xffffff, 1.5);
+      var fillLight = new THREE.DirectionalLight(0xffffff, 1.5);
+      var rimLight = new THREE.DirectionalLight(0xffffff, 1.5);
+
+			keyLight.position.set(0, -80, 80);
+			fillLight.position.set(80, 0, -80);
+			rimLight.position.set(-80, 80, 0);
+
       // put mesh and light into scene
-			scene.add(cube);
-		  scene.add(light);
+			scene.add(earth);
+		  scene.add(keyLight);
+      scene.add(fillLight);
+		  scene.add(rimLight);
 
-			camera.position.z = 6;
-      
-      // for orbit-rotation
+      // animation and interacton
       var clock = new THREE.Clock();
-
-      // for mouse control
       var controls = new THREE.OrbitControls(camera);
 
 			var render = function () {
 			  requestAnimationFrame(render);
-			  // self-rotation
-			  cube.rotation.x += 0.01;//THREE.Math.degToRad(45);
-			  cube.rotation.y += 0.01;//THREE.Math.degToRad(45);
+			  //self-rotation
+			  earth.rotation.x += 0.01;//THREE.Math.degToRad(45);
+			  earth.rotation.y += 0.01;//THREE.Math.degToRad(45);
 			  // orbit-rotation
 			  var time = clock.getElapsedTime() * 0.5;
-			  cube.position.x = Math.cos(time) * 3;
-			  cube.position.y = Math.sin(time) * 3;
+			  earth.position.x = Math.cos(time) * 3;
+			  earth.position.y = Math.sin(time) * 3;
 
 			  controls.update();
 			  renderer.render(scene, camera);
